# boardshop

./: .env.template  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_31_1751-18d073c1e3bc_i_forgot_naming_convention.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  auth.py  fastapi_users.py  users.py
app/api/dependencies/authentication/: __init__.py  backend.py  strategy.py  user_manager.py
app/core/: config.py
app/core/authentication/: user_manager.py
app/core/models/: access_token.py  base.py  db_helper.py  user.py
app/core/schemas/: user.py
app/core/types/: __init__.py
